# Minol

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml
custom_components/minol_energy/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/minol_energy/translations/: de.json  en.json
scripts/: get_token.py
tests/: conftest.py  test_api_auth.py  test_api_live.py  test_auth.py  test_helpers.py
tests/fixtures/: b2c_login.html  b2c_saml_post.html
