[project]
name = "minol-energy"
version = "0.3.0"
description = "Home Assistant integration for the Minol tenant energy portal"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
